# HW_10_Django_for_checking

./: README.md  pyproject.toml
hw_project/: db.sqlite3
hw_project/hw_project/: asgi.py  settings.py  wsgi.py
hw_project/quotes/: models.py  urls.py  views.py
hw_project/quotes/migrations/: 0001_initial.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/quotes/: base.html  index.html
hw_project/utils/: migration.py
