[tool.poetry]
name = "hw-10-web-django-for-cheking"
version = "0.1.0"
description = ""
authors = ["Andrei198203 <buzin.andrei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
pymongo = "^4.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
